clear works, class toggle works

--- a/src/components/TodoComponents/Todo.css
+++ b/src/components/TodoComponents/Todo.css
@@ -1,4 +1,4 @@
-.item.completed{
-    color:red;
-    text-decoration: line-through;
+.item.completed {
+    color:red !important ;
+    text-decoration: line-through !important;
 }
