--- a/src/components/TodoComponents/Todo.css
+++ b/src/components/TodoComponents/Todo.css
@@ -1,4 +1,5 @@
-.item.completed {
-    color:red !important ;
+.item.completed li {
+    color:darkred !important ;
     text-decoration: line-through !important;
+    background-color: rgb(224, 108, 88) !important;
 }
